--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
    <div class="container">
       <div class="header-image__inner">
          <div class="header-image__wrapper">
-            <picture><source srcset="../img/header/4356.webp" type="image/webp"><img src="../img/header/4356.png" alt=""></picture>
+            <picture><source srcset="img/header/4356.webp" type="image/webp"><img src="img/header/4356.png" alt=""></picture>
          </div>
       </div>
    </div>
